fixed cards container and flexbox wrap css

--- a/front-end-inspiration-board/src/App.css
+++ b/front-end-inspiration-board/src/App.css
@@ -16,7 +16,7 @@
 }
 .container {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1.5fr 0.5fr 1fr;
   grid-template-rows: 70px 215px 90px 300px;
   height: 100vw;
 }
@@ -88,7 +88,8 @@ h3 {
 
 #cardListContainer {
   grid-row: 4;
-  grid-column: 1 / span -1;
+  grid-column: 1 / span 3;
   margin: 15px;
   display: flex;
+  flex-wrap: wrap;
 }
